--- a/Cyclistic_case_analysis.rmd
+++ b/Cyclistic_case_analysis.rmd
@@ -3,8 +3,8 @@ title: "Cyclistic Case Study"
 author: "Nate"
 date: "2022-12-21"
 output:
-  html_document: default
   word_document: default
+  html_document: default
 ---
 
 ```{r setup, include=FALSE}
@@ -75,7 +75,7 @@ sapply(past12, str)
 full_year <- bind_rows(past12)
 ```
 
-I also confirmed that there are three different bike types and two different types of members, as expected. I discovered that certain subsets of this data do not include any data on the start and end stations of trips. There were approximately 800k observances like this. It will be something to bear in mind when working with this data. 
+I also confirmed that there are three different bike types and two different types of members, as expected. I discovered that certain subsets of this data do not include any data on the start and end stations of trips. There were approximately 900k observances like this. It will be something to bear in mind when working with this data. 
 
 ``` {r Inspecting Joined Data}
 # Inspect single dataframe
@@ -88,7 +88,7 @@ It seemed to be certain months that contained many observances missing this info
 
 Lastly, I confirmed that the columns had a consistent datetime format and verified that I could filter out some cases (such as the observances without station names) if necessary. However, as stated above, I decided it would not be necessary, unless there is some way the empty columns reflect on the integrity of those observances.
 
-``` {r Removing Unwanted Observances, eval=FALSE}
+``` {r Removing Unwanted Observances, eval=FALSE, echo=FALSE}
 # Data without dropped stations
 with_station <- filter(full_year, 
                   start_station_name != "" & end_station_name != "")
@@ -99,7 +99,7 @@ with_station <- filter(full_year,
 
 I added the following columns to the dataset for convenience in analysis. I made columns for days of the week and for months, to compare rider behavior on different days and months. I also calculated trip duration in a new column based on the start and end time columns.
 
-``` {r Adding Columns, echo=TRUE, include=FALSE}
+``` {r Adding Columns, echo=TRUE}
 # Add columns to use in analysis
 all_trips <- full_year %>% mutate(
   month = month(started_at, label=TRUE, abbr=TRUE), 
@@ -112,7 +112,7 @@ all_trips <- mutate(all_trips,
 
 Before analyzing the data, I removed all observations without an entry for `start_station_name` and `end_station_name` so that there would be no question of data integrity where those observations are concerned. I confirmed that those weren't concentrated on a particular day or month before removing them.
 
-After observing the data both in a histogram and as quartile values, I also elected to eliminate any trips with a duration of more than 1 hour or less than 0 minutes. The data gives no definite answer to how these values were found, but based on the station names and ids, the implication is that many of these may have referred to bikes taken out for maintenance or electric bikes taken out to be charged. Because these accounted for only a tiny percentage of the total observations, I eliminated them as outliers. Trips most frequently lasted between 0 and 30 minutes, which was further evidence that it was appropriate to conclude that trips longer than a couple hours, or even days long in some cases, referred to a different situation entirely than the one I was investigating. 
+After observing the data both in a histogram and as quartile values, I also elected to eliminate any trips with a duration of more than 3 hours or less than 0 minutes. The data gives no definite answer to how these values were found, but based on the station names and ids, the implication is that many of these may have referred to bikes taken out for maintenance or electric bikes taken out to be charged. Because these accounted for only a tiny percentage of the total observations, I eliminated them as outliers. Trips most frequently lasted between 0 and 30 minutes, which was further evidence that it was appropriate to conclude that trips longer than a couple hours, or even days long in some cases, referred to a different situation entirely than the one I was investigating. 
 
 ``` {r Summarize Dataset}
 all_trips %>% 
@@ -128,7 +128,7 @@ Lastly, I noticed that the majority of these outliers I eliminated had `docked_b
 # Use previous observations to clean data
 clean_trips <- all_trips %>% 
   filter(rideable_type != 'docked_bike') %>% 
-  filter(duration_as_mins > 0 & duration_as_mins < 60)
+  filter(duration_as_mins > 0 & duration_as_mins < 180)
 
 cleanv2 <- clean_trips %>% 
   filter(start_station_name != "" & end_station_name != "")
@@ -138,7 +138,6 @@ cleanv2 <- clean_trips %>%
 clean_missing_stations <- clean_trips %>% 
   filter(start_station_name == "" | end_station_name == "")
 
-clean_missing_stations %>% group_by(month) %>% summary()
 clean_missing_stations %>% group_by(month) %>% count()
 ```
 
@@ -159,7 +158,7 @@ aggregate(
   FUN = mean)
 ```
 
-``` {r Make Summary Dataframe}
+``` {r Make Summary Dataframe, warning=FALSE}
 # Make a summary set for analysis
 ctrips_by_duration <- cleanv2 %>% 
   group_by(rideable_type, member_casual, day, month) %>% 
@@ -167,6 +166,42 @@ ctrips_by_duration <- cleanv2 %>%
             avg_ride = mean(duration_as_mins), 
             median_ride = median(duration_as_mins)) %>% 
   arrange(month, day, member_casual, rideable_type)
+```
+
+``` {r Plot Ride Time, echo=FALSE}
+ggplot(data = ctrips_by_duration) + 
+  geom_col(mapping = aes(x=day, y=avg_ride, fill=member_casual), 
+           position="dodge") + 
+  labs(title = 'Avg Ride Time',
+       subtitle = 'by day',
+       x = 'Day of the Week',
+       y = 'Ride Time')
+
+ggplot(data = ctrips_by_duration) + 
+  geom_col(mapping = aes(x=day, y=median_ride, fill=member_casual),
+           position = 'dodge') + 
+  labs(title = 'Median Ride Time',
+       subtitle = 'by day',
+       x = 'Day of the Week',
+       y = 'Ride Time')
+
+ggplot(data = ctrips_by_duration) + 
+  geom_col(mapping = aes(x=month, y=avg_ride, fill=member_casual), 
+           position="dodge") + 
+  labs(title = 'Avg Ride Time',
+       subtitle = 'by month',
+       x = 'Month',
+       y = 'Ride Time')
+
+ggplot(data = ctrips_by_duration) + 
+  geom_col(mapping = aes(x=month, 
+                         y=median_ride, 
+                         fill=member_casual),
+           position = 'dodge') + 
+  labs(title = 'Median Ride Time',
+       subtitle = 'by month',
+       x = 'Month',
+       y = 'Ride Time')
 ```
 
 I also recodified the trip start time so that I could view the data in histogram form and compare peak usage times for different types of users. It showed that bike usage peaked in the late afternoon, when people are done with work or school, but that for subscription members there was a second peak coinciding with the morning commute. Casual riders showed no spike in usage during the morning hours.
@@ -226,47 +261,13 @@ ggplot(data = ctrips_by_duration) +
        subtitle = 'by rider type',
        x = 'Months',
        y = 'Number of Rides')
-
-ggplot(data = ctrips_by_duration) + 
-  geom_col(mapping = aes(x=day, y=avg_ride, fill=member_casual), 
-           position="dodge") + 
-  labs(title = 'Avg Ride Time',
-       subtitle = 'by day',
-       x = 'Day of the Week',
-       y = 'Ride Time')
-
-ggplot(data = ctrips_by_duration) + 
-  geom_col(mapping = aes(x=day, y=median_ride, fill=member_casual),
-           position = 'dodge') + 
-  labs(title = 'Median Ride Time',
-       subtitle = 'by day',
-       x = 'Day of the Week',
-       y = 'Ride Time')
-
-ggplot(data = ctrips_by_duration) + 
-  geom_col(mapping = aes(x=month, y=avg_ride, fill=member_casual), 
-           position="dodge") + 
-  labs(title = 'Avg Ride Time',
-       subtitle = 'by month',
-       x = 'Month',
-       y = 'Ride Time')
-
-ggplot(data = ctrips_by_duration) + 
-  geom_col(mapping = aes(x=month, 
-                         y=median_ride, 
-                         fill=member_casual),
-           position = 'dodge') + 
-  labs(title = 'Median Ride Time',
-       subtitle = 'by month',
-       x = 'Month',
-       y = 'Ride Time')
 ```
 
 ***
 
 ### Conclusion: The differences between members and casual riders
 
-The data showed three key differences between annual members of the bikeshare and casual users. The first was that over all days and times of the year, casual users took longer rides than annual members did, where the median ride time for casual users was approximately 37% longer and the average ride time 35% longer.
+The data showed three key differences between annual members of the bikeshare and casual users. The first was that over all days and times of the year, casual users took longer rides than annual members did, where the median ride time for casual users was approximately 44% longer and the average ride time 64% longer.
 
 It also showed that the usage rate for casual users (as a fraction of total rides), only matches that of annual members during the summer months and it significantly decreases during the weekdays. That is to say, although there are always some casual users and some members riding, annual members comprise a clear majority during the week and make up nearly all riders during the colder months of the year.
 
